# rs-autoit

./: Cargo.toml  README.md  README.tpl  build.rs  wrapper.hpp
src/: lib.rs
tests/: rs-autoit test1.txt
