[package]
name = "autoit"
version = "0.1.1"
authors = ["Bruno Bigras <bigras.bruno@gmail.com>"]
description = """
bindings for AutoItX
"""
repository = "https://github.com/brunoqc/rs-autoit"
readme = "README.md"
license = "Unlicense/MIT"
keywords = ["autoit", "autoitx"]
build = "build.rs"

[dependencies]
widestring = "0.2"

[build-dependencies]
bindgen = "0.29"
