[package]
name = "autoit"
version = "0.1.1"
authors = ["Bruno Bigras <bigras.bruno@gmail.com>"]
description = """
bindings for AutoItX
"""
repository = "https://github.com/brunoqc/rs-autoit"
readme = "README.md"
license = "Unlicense/MIT"
keywords = ["autoit", "autoitx"]

[dependencies]
widestring = "0.4"

[build-dependencies]
bindgen = "0.39"
